infra/k8s/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: default
spec:
  type: NodePort
  selector:
    app: caddy
  ports:
    - name: http
      port: 80
      nodePort: 30080
    - name: api
      port: 8080
      nodePort: 30081
      targetPort: 8080
